--- a/04_Manhole/manhole_Lugia.html
+++ b/04_Manhole/manhole_Lugia.html
@@ -129,13 +129,13 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      max-height: 394px;
+      max-height: 560px;
       box-sizing: border-box;
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-
-      background-image: url(../src/assets/bg_dot.png);
+      background-image: url(../src/assets/background/back.png);
+      background-size: 120%;
     }
 
 
