[UPDATE] 주고쿠, 규슈 데이터 추가에 따른 변경

--- a/src/pages/Main/mainPage.html
+++ b/src/pages/Main/mainPage.html
@@ -70,12 +70,12 @@
             <h1 class="red">긴키</h1>
           </div>
         </a>
-        <a class="land-box" id="주고쿠">
+        <a class="land-box" id="주고쿠.시코쿠">
           <div class="regionbox" style="left: 22%; bottom: 30%">
             <h1 class="yellow">주고쿠•시코쿠</h1>
           </div>
         </a>
-        <a class="land-box" id="규슈">
+        <a class="land-box" id="규슈.오키나와">
           <div class="regionbox" style="left: 2%; bottom: 15%">
             <h1 class="pink">규슈•오키나와</h1>
           </div>
