[UPDATE] 서버 주소 변경

--- a/src/pages/Main/mainPage.html
+++ b/src/pages/Main/mainPage.html
@@ -241,7 +241,7 @@
           </div>
         </div>
         <div class="trainer-info-side-class inner-shadow-box">
-          견습 트레이너
+          <a href="/src/pages/Achievements/AchievementsPage.html">도전과제</a>
         </div>
       </div>
       <div class="trainer-info-status">
@@ -318,7 +318,7 @@
     });
   </script>
   <link rel="stylesheet" href="./login_style_grey.css" />
-  <script src="./login.js"></script>
+  <script type="module" src="./login.js"></script>
   <script type="module" src="./manholeTable/manholeTable.js"></script>
   <!-- login end -->
 </html>
